[package]
name = "first-app"
version = "0.1.0"
authors = ["m.buculovic"]
edition = "2021"
build = "build.rs"
description = "Erster Versuch mit Rust und SlintUI was zu machen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "Textwiedergabe"
identifier = "io.github.vmhomelab.first-app"